--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,8 +33,12 @@
     <string name="home_withdraw">Retiradas</string>
     <string name="home_home">Home</string>
     <string name="deposits_newAddress">Novo endereço</string>
+
     <string name="title_activity_deposits">deposits</string>
     <string name="title_activity_edit_user">EditUserActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
